intel/bench_214_work/extr_.labq3map2libsmathlibm4x4.c_m4x4_multiply_by_m4x4_with_main/log.txt
bench_214_work/extr_.labq3map2libsmathlibm4x4.c_m4x4_multiply_by_m4x4_with_main/extr_.labq3map2libsmathlibm4x4.c_m4x4_multiply_by_m4x4_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.labq3map2libsmathlibm4x4.c_m4x4_multiply_by_m4x4_with_main/extr_.labq3map2libsmathlibm4x4.c_m4x4_multiply_by_m4x4_with_main.c:80:16: error: default initialization of an object of const type 'const m4x4_t' (aka 'int *const')
  const m4x4_t src;
               ^
                   = nullptr
2 errors generated.
HLS FPGA Parse FAILED.
